Update shortcut.md